new-system-tests/resources/kubernetes/keycloak/06_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-http
  namespace: keycloak
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: keycloak
    component: keycloak
  type: ClusterIP
